--- a/package.json
+++ b/package.json
@@ -15,6 +15,10 @@
     "license": "ISC",
     "devDependencies": {
         "css-loader": "^6.7.1",
+        "eslint": "^8.28.0",
+        "eslint-config-airbnb-base": "^15.0.0",
+        "eslint-config-prettier": "^8.5.0",
+        "eslint-plugin-import": "^2.26.0",
         "express": "^4.18.2",
         "style-loader": "^3.3.1",
         "webpack": "^5.74.0",
